--- a/app/views/application/acknowledgments.html.haml
+++ b/app/views/application/acknowledgments.html.haml
@@ -7,43 +7,47 @@
             Special thanks to:
           %ul#thanks.zmdi-hc-ul
             %li
-              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
-              %a{href: 'https://twitter.com/dianavilibert'}
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              %a{href: 'https://twitter.com/dianavilibert', 'aria-label' => 'Link to Diana Vilibert\'s homepage'}
                 Diana Vilibert
-              for copy
+              %span{'aria-hidden' => 'true'}
+                for copy
 
             %li
-              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
-              %a{href: 'https://twitter.com/zavoloklom'}
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              %a{href: 'https://twitter.com/zavoloklom', 'aria-label' => 'Link to Sergey Kupletsky\'s homepage'}
                 Sergey Kupletsky
-              for
-              %a{href: 'http://zavoloklom.github.io/material-design-iconic-font'}
+              %span{'aria-hidden' => 'true'}
+                for
+              %a{href: 'http://zavoloklom.github.io/material-design-iconic-font', 'aria-label' => 'Link to Material Design Iconic Font homepage'}
                 Material Design Iconic Font icons
 
             %li
-              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
-              %a{href: 'https://twitter.com/davegandy'}
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              %a{href: 'https://twitter.com/davegandy', 'aria-label' => 'Link to Dave Gandy\'s homepage'}
                 Dave Gandy
-              for
-              %a{href: 'http://fontawesome.io/'}
+              %span{'aria-hidden' => 'true'}
+                for
+              %a{href: 'http://fontawesome.io/', 'aria-label' => 'Link to Font Awesome homepage'}
                 Font Awesome
 
             %li
-              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
-              %a{href: 'https://codepen.io/JeffreyTaylor'}
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              %a{href: 'https://codepen.io/JeffreyTaylor', 'aria-label' => 'Link to Jeffrey Taylor\'s homepage'}
                 Jeffrey Taylor
-              for
-              %a{href: 'https://codepen.io/JeffreyTaylor/pen/jzohC'}
+              %span{'aria-hidden' => 'true'}
+                for
+              %a{href: 'https://codepen.io/JeffreyTaylor/pen/jzohC', 'aria-label' => 'Link to balloon animation code snippet'}
                 the balloon animation
 
             %li
-              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
-              %a{href: 'http://twitter.github.io/typeahead.js/'}
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              %a{href: 'http://twitter.github.io/typeahead.js/', 'aria-label' => 'Link to typeahead.js homepage'}
                 typeahead.js
 
             %li
-              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
-              %a{href: 'https://github.com/js-cookie/js-cookie'}
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              %a{href: 'https://github.com/js-cookie/js-cookie', 'aria-label' => 'Link to js-cookie homepage'}
                 js-cookie
 
 
