--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -32,7 +32,8 @@
             %a{href: '/privacy'}
               Privacy Policy
 
-          &middot;
+          %span{'aria-hidden' => 'true'}
+            &middot;
 
           %p.site-link#acknowledgments
             %a{href: '/acknowledgments'}
