--- a/app/views/application/sign.html.haml
+++ b/app/views/application/sign.html.haml
@@ -4,10 +4,12 @@
       %div.row
         %div.col-lg-12
           %div#directions
-            %h1#encouragement
+            %h1#encouragement{'aria-hidden' => 'true'}
               %span.uh-oh
                 Uh oh!
               That didn't work.
+            %span.sr-only
+              Uh oh! That didn't work.
             %h5#ps
               (Don't worry! Just try again.)
 
